infrastructure/foundation/namespaces/base/namespaces.yaml
# PayU DevSecOps — Namespace Strategy (Phase 1 Foundation)
# Base manifests — core application namespaces
apiVersion: v1
kind: Namespace
metadata:
  name: payu-dev
  labels:
    app.kubernetes.io/part-of: payu
    payu.io/environment: dev
    payu.io/managed-by: platform-team
    payu.io/tier: non-production
    payu.fajjjar.my.id/ingress: shared
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
---
apiVersion: v1
kind: Namespace
metadata:
  name: payu-sit
  labels:
    app.kubernetes.io/part-of: payu
    payu.io/environment: sit
    payu.io/managed-by: platform-team
    payu.io/tier: non-production
    payu.fajjjar.my.id/ingress: shared
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
---
apiVersion: v1
kind: Namespace
metadata:
  name: payu-uat
  labels:
    app.kubernetes.io/part-of: payu
    payu.io/environment: uat
    payu.io/managed-by: platform-team
    payu.io/tier: non-production
    payu.fajjjar.my.id/ingress: shared
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
---
apiVersion: v1
kind: Namespace
metadata:
  name: payu-preprod
  labels:
    app.kubernetes.io/part-of: payu
    payu.io/environment: preprod
    payu.io/managed-by: platform-team
    payu.io/tier: pre-production
    payu.fajjjar.my.id/ingress: shared
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
---
apiVersion: v1
kind: Namespace
metadata:
  name: payu
  labels:
    app.kubernetes.io/part-of: payu
    payu.io/environment: prod
    payu.io/managed-by: platform-team
    payu.io/tier: production
    payu.fajjjar.my.id/ingress: shared
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
---
apiVersion: v1
kind: Namespace
metadata:
  name: payu-cicd
  labels:
    app.kubernetes.io/part-of: payu
    payu.io/environment: cicd
    payu.io/managed-by: platform-team
    payu.io/tier: non-production
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
